# FAT

./: README.md
code/fat16/: CMakeLists.txt  Disks.c  FAT.drawio  const.h  dir.c  disk.c  fat16.h  file.c  kernel.h  main.c  myfsys  sys.c
code/lib/: CMakeLists.txt  const.h  dir.c  disk.c  fat16.h  file.c  kernel.h  main.c
code/uselib/: CMakeLists.txt  main.c
